# home-assistant-remote-commands

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: release.yml
bin-examples/: log_timestamp.sh  notify_user.json  open_ha_ui.sh
ha-remote-commands/: mqtt_callback_router.py
ha_remote_commands/: __main__.py  app_config.py  command_server.py  get_command_list.py  hacky_mqtt_client.py  mqtt_callback_router.py
